--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title> About Satoria </title>
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -95,3 +95,4 @@ Rometty came from humble beginnings and worked her way up, showing that your bac
 
 </body>
 </html>
+
