--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title> Satoria </title>
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -75,3 +75,4 @@
           
 </body>
 </html>
+
