--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title>Satoria's Portfolio </title>
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -89,4 +89,5 @@
 </footer>
 
 </body>
+
 </html>
