--- a/reflection.html
+++ b/reflection.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title> Reflections </title>
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -76,4 +76,5 @@
 
 
 </body>
+
 </html>
