--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 <div class="container">
         
         <section class="welcome-section">
-         <img class="portfolio-logo"src="../Assests/logo.png" alt="Satoria 	Logo" >
+         <img class="portfolio-logo"src="logo.png" alt="Satoria 	Logo" >
             <div class="welcome-box mission-box">
                 <h2>I'm happy you're here! 🎉</h2>
                 <p>This section of my website is dedicated to sharing my 		career journey, aspirations, and a creative take on AI.</p>
@@ -91,3 +91,4 @@
 </body>
 
 </html>
+
