--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<section class="intro">
   	<div class="intro-photo">
    		<a href="mailto:satoria.somers@utech.edu.jm">
-     		<img src="Assests/Tora.jpg" alt="Satoria Somers">
+     		<img src="Tora.jpg" alt="Satoria Somers">
     		</a>
   	</div>
 
@@ -75,5 +75,6 @@
           
 </body>
 </html>
+
 
 
