--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
   	  <div class="content-box vision-box">
                 <h2>📄 My Resume</h2>
                 <p>Click below to view my recent resume!</p>
-                <a href="../Assests/SatoriaResume.pdf" target="_blank">View 		Resume</a>
+                <a href="SatoriaResume.pdf" target="_blank">View 		Resume</a>
             </div>
            
           <div class="content-box full-width ai-box">
@@ -91,4 +91,5 @@
 </body>
 
 </html>
+
 
